Closes #21: Split content across multiple pages.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>Peter Thomas Horn</title>
-    <meta name="description" content="I am a 28 year old world citizen who works as a software developer in Hamburg. Married to the loveliest person in the world, I like to taste craft beer and make music." />
+    <meta name="description" content="I am a 29 year old father who works as a software developer in Hamburg. Married to the loveliest person in the world, I like to taste craft beer and make music." />
     <meta name="robots" content="index,follow" />
     <meta property="og:title" content="Peter Thomas Horn" />
     <meta property="og:description" content="Personal website of Peter Thomas Horn" />
@@ -20,16 +20,31 @@
     <link rel="icon" type="image/png" href="favicon-16x16.png?revision=0" sizes="16x16" />
     <link rel="stylesheet" type="text/css" href="main.css?revision=0">
 </head>
-<body class="default-background">
-    <header class="header">
-        <div class="wrap">
-            <div class="gutter">
-                <p>Hello, my name is</p>
-                <h1>Peter Thomas Horn</h1>
-                <p class="lead">I am a 29 year old world citizen who works as a software developer in Hamburg.
-                    Married to the loveliest person in the world, I like to taste craft beer and make music.</p>
+<body class="default-background page index">
+    <header>
+        <div class="header">
+            <div class="wrap">
+                <div class="gutter introduction">
+                    <p>Hello, my name is</p>
+                    <h1>Peter Thomas Horn</h1>
+                    <p class="lead">I am a 29 year old world citizen who works as a software developer in Hamburg.
+                        Married to the loveliest person in the world, I like to taste craft beer and make music.</p>
+                </div>
+                <img class="portrait" src="images/portrait.jpg?revision=0" alt="A portrait of Peter Thomas Horn" />
             </div>
-            <img class="portrait" src="images/portrait.jpg?revision=0" alt="A portrait of Peter Thomas Horn" />
+        </div>
+        <div class="navigation-bar">
+            <div class="wrap">
+                <div class="gutter">
+                    <nav>
+                        <ul class="navigation-list">
+                            <li class="navigation-item"><a href="index.html">Frontpage</a></li>
+                            <li class="navigation-item"><a href="music.html">Music</a></li>
+                            <li class="navigation-item"><a href="career.html">Career</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
         </div>
     </header>
     <main>
@@ -39,7 +54,7 @@
                     <p>Some stereotypes about software developers do not apply to me.
                         I usually do not drink coffee, do not like mechanical keyboards and am an opponent to the home invasion by smart devices and the internet of things.
                         Ironically I could not care less about computer games which I abandoned a few years ago after they originally sparked my career at the age of 12.
-                        I am ready for a round of chess, though.</p>
+                        I am ready for a round of chess, though. You can read more about my career as a software developer <a href="career.html">on my career page</a>.</p>
                     <p>Hungarian and German are my mother tongues. My English was proven safe for international business contracts.
                         I learned French in school for four years and I engaged with Finnish for a little bit. I have a high affinity to languages.</p>
                     <p>I am an optimistic nihilist. The YouTube channel "Kurzgesagt - In a Nutshell" produced <a href="https://www.youtube.com/watch?v=MBRqu0YOH14">an appealing short film which explains it nicely</a>.
@@ -108,68 +123,16 @@
             </div>
         </section>
         <section class="section music">
-            <div class="music-image-container">
-                <img src="images/music.jpg?revision=0" alt="A live performance of a band I am playing in" />
-            </div>
             <div class="wrap">
                 <div class="gutter">
                     <h2>I make music</h2>
                     <p>I regularly stray well beyond my home of extreme metal to experience other forms of audible beauty.
                         Actually I believe that the soundtrack of my heart sounds more like Her Name Is Calla or Ólafur Arnalds rather than Cradle Of Filth and As I Lay Dying.</p>
-                    <h3>Playing the bass guitar</h3>
-                    <p>I play bass guitar since I was 15 years old.
-                        My first bass was a used Samick I took over from a friend.
-                        I do remember my first amp but not its brand or model – it was worn out and muffled in its sound.
-                        In 2007 I bought a five string Tanglewood Rebel 5K.
-                        People knowledgeable about guitar brands are often surprised they produce electric basses, too.
-                        Not much later I took over a Yorkville 200B amp from the same friend I got my first bass from.
-                        It was quite a bargain for what it had to offer. Brilliant heights and pushing depths.
-                        It is still my main amp.
-                        Because it is in use for more than 20 years I had to disassemble and solder on a few new potentionmeters in 2017.
-                        I was happy to find one replacement part at all: the volume potentiometer is a weird one and I had to order a Peavy branded replacement part from Spain because alternatively only parts from the United States were available for twice the price.</p>
-                    <p>The Tanglewood Rebel served me well and I had a lot of fun with it ever since.
-                        Eleven years later I have grown and changed just as my skills developed.
-                        With much more clarity about the possibilities and my requirements I bought an ESP LTD B204SM.
-                        It feels like a big move forward.
-                        Back to four strings but with two humbuckers and active electronics with an amazing tone range offers a completely different sound and playing experience.
-                        Maybe I won't play my Tanglewood much anymore but it has been for such a long time already, it is part of the family and will not get abandoned.
-                        When I am at home, I usually use headphones or my Hi-Fi speakers for practicing.
-                        Always part of the setup is my BOSS GT-1B multi-effects processor which I consider a decent product after trying out different devices of that kind.
-                        There are tons of possibilities and one utilizes its full potential only after a long time.</p>
-                    <p>In the past I used to play much over my iMac with signal processors like Native Instruments Guitar Rig, AmpliTube or EZmix.
-                        Maybe it is because of my professional background that I do not have reservations as typical for rather conservative musicians.
-                        With my recent equipment choices my preference changed: I like to play with my ESP, GT-1B and 200B without the hassle of a computer.
-                        In fact, I became tired of the wiring, the maintenance and the interaction for jamming.
-                        I return in case of song writing or recording to Guitar Pro and REAPER on the computer, though.</p>
-                    <h3>Playing the electric guitar</h3>
-                    <p>One year after I started with the bass guitar a few savings manifested in the cheapest electric guitar I could buy on the internet: a brand new Chinese no-name with a body of compressed wood for 40€.
-                        Some Saturdays I played from 10 in the morning until 10 in the evening.
-                        Measured by todays standards the sound was awful and I had to retune every 10 minutes while the strings felt like cutting into my fingertips.
-                        But I learned a lot and completely by myself.</p>
-                    <p>In 2009 I bought a matte black Schecter Diamond Demon from the first salary I got.
-                        That was a hefty upgrade totally worth it.
-                        The years after I played with thick strings mostly in the tune range of Drop A to Drop C because I liked the deep and metallic sound as present on Bring Me The Horizon's album Suicide Season.</p>
-                    <h3>Playing the keys</h3>
-                    <p>I had a cheap MIDI keyboard a few years ago and played sampled instruments as well as synthesizers on my computer.
-                        I sold it at some point. It was a simple input device bundled with a hobbyist software.
-                        With my wife, who plays piano since the age of four, my interest in playing this instrument reignited.
-                        Having a decent Yamaha E-Piano at disposal makes it much more pleasant to play.
-                        At most with the remarkably unique sound of Nils Frahms Una Corda sample library for Native Instruments Kontakt.
-                        I really love that sound.</p>
-                    <h3>Recording everything</h3>
-                    <p>The previously mentioned, cheap MIDI keyboard was bundled with Magix Music Maker.
-                        Looking back it was a beginner friendly introduction to the workflow and concept of digital audio workstations.
-                        I recorded my first title with Music Maker in 2008.
-                        Remembering it today it was a product which I would not be confidently selling.
-                        Slow, unstable and lacking precision in use of its interface.
-                        I got aware of Steinberg Cubase not so long after but with its ridiculous pricing it seemed out of question back then.
-                        I did not know much yet about alternative digital audio workstations.
-                        Luckily I was introduced to REAPER in 2009.
-                        It is my main tool for recording, mixing and mastering since then.
-                        Nothing I tried could compete with REAPER.
-                        It is affordable, highly efficient, feature packed but without bloat.
-                        It is the best solution for recording music.
-                        For loop based live performance Ableton Live clearly wins.</p>
+                    <p>I played the recorder while being in second grade. Well, one has to start somewhere.
+                        After settling on rock and metal as my favorite style of music I bought my first bass guitar at the of 15. 
+                        My first electric guitar just one year later. Since then I continuously improved my skills.
+                        I wrote songs, recorded and published them. In bands and on my own.</p>
+                    <p style="text-align: center;"><a href="music.html" class="read-more">Read More About Music</a></p>
                 </div>
             </div>
         </section>
@@ -279,7 +242,7 @@
     <footer class="footer">
         <div class="wrap">
             <div class="gutter">
-                <p>&copy; 2020 Peter Thomas Horn.<br />This website is proudly made <em>without</em> frameworks or content management systems.</p>
+                <p>&copy; 2020 Peter Thomas Horn. This website is proudly made <em>without</em> overhyped frameworks, bloated content management systems, needless JavaScript, pesky advertisement and stalking trackers. Back to the basics for a better web.</p>
             </div>
         </div>
     </footer>
