Improved site appearance on print media.
Far from perfect but a lot better.

--- a/src/pages/career.html
+++ b/src/pages/career.html
@@ -164,6 +164,7 @@
                 </div>
             </div>
         </section>
+        <div class="page-break"></div>
         <section class="section education">
             <div class="wrap">
                 <div class="gutter">
