--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -47,6 +47,7 @@
             </div>
         </div>
     </header>
+    <div class="page-break"></div>
     <main>
         <section class="section">
             <div class="wrap">
@@ -68,6 +69,7 @@
                 </div>
             </div>
         </section>
+        <div class="page-break"></div>
         <section class="section genealogy">
             <div class="wrap">
                 <div class="gutter">
@@ -122,6 +124,7 @@
                 </div>
             </div>
         </section>
+        <div class="page-break"></div>
         <section class="section music">
             <div class="wrap">
                 <div class="gutter">
@@ -136,6 +139,7 @@
                 </div>
             </div>
         </section>
+        <div class="page-break"></div>
         <section class="section books">
             <div class="wrap">
                 <div class="gutter">
@@ -191,6 +195,7 @@
                 </div>
             </div>
         </section>
+        <div class="page-break"></div>
         <section class="section beer">
             <div class="wrap beer">
                 <div class="column">
@@ -214,6 +219,7 @@
                 </div>
             </div>
         </section>
+        <div class="page-break"></div>
         <section class="section">
             <div class="wrap">
                 <div class="gutter">
