Updated my location.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
     <title>Peter Thomas Horn</title>
-    <meta name="description" content="I am a 29 year old father who works as a software developer in Hamburg. Married to the loveliest person in the world, I like to taste craft beer and make music." />
+    <meta name="description" content="I am a 29 year old father from Ribnitz-Damgarten who works as a software developer. Married to the loveliest person in the world, I like to taste craft beer and make music." />
     <meta name="robots" content="index,follow" />
     <meta property="og:title" content="Peter Thomas Horn" />
     <meta property="og:description" content="Personal website of Peter Thomas Horn" />
@@ -27,7 +27,7 @@
                 <div class="gutter introduction">
                     <p>Hello, my name is</p>
                     <h1>Peter Thomas Horn</h1>
-                    <p class="lead">I am a 29 year old world citizen who works as a software developer in Hamburg.
+                    <p class="lead">I am a 29 year old father from Ribnitz-Damgarten who works as a software developer.
                         Married to the loveliest person in the world, I like to taste craft beer and make music.</p>
                 </div>
                 <img class="portrait" src="images/portrait.jpg?revision=0" alt="A portrait of Peter Thomas Horn" />
