--- a/src/pages/career.html
+++ b/src/pages/career.html
@@ -12,7 +12,7 @@
     <meta property="og:locale" content="en_US" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="favicon-196x196.png?revision=0" />
-    <link rel="canonical" href="https://peterthomashorn.info/career" />
+    <link rel="canonical" href="https://peterthomashorn.info/career.html" />
     <link rel="icon" type="image/png" href="favicon-196x196.png?revision=0" sizes="196x196" />
     <link rel="icon" type="image/png" href="favicon-128x128.png?revision=0" sizes="128x128" />
     <link rel="icon" type="image/png" href="favicon-96x96.png?revision=0" sizes="96x96" />
