Fixed empty alt-tags.

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -77,29 +77,29 @@
                     <div class="family-tree">
                         <div class="generation">
                             <div class="person">
-                                <img src="images/kekule-4.png?revision=0" alt="" />
+                                <img src="images/kekule-4.png?revision=0" alt="Portrait of an ancestor" />
                             </div>
                             <div class="person">
-                                <img src="images/kekule-5.png?revision=0" alt="" />
+                                <img src="images/kekule-5.png?revision=0" alt="Portrait of an ancestor" />
                             </div>
                             <div class="person">
-                                <img src="images/kekule-6.png?revision=0" alt="" />
+                                <img src="images/kekule-6.png?revision=0" alt="Portrait of an ancestor" />
                             </div>
                             <div class="person">
-                                <img src="images/kekule-7.png?revision=0" alt="" />
-                            </div>
-                        </div>
-                        <div class="generation">
-                            <div class="person">
-                                <img src="images/kekule-2.png?revision=0" alt="" />
-                            </div>
-                            <div class="person">
-                                <img src="images/kekule-3.png?revision=0" alt="" />
+                                <img src="images/kekule-7.png?revision=0" alt="Portrait of an ancestor" />
                             </div>
                         </div>
                         <div class="generation">
                             <div class="person">
-                                <img src="images/kekule-1.png?revision=0" alt="" />
+                                <img src="images/kekule-2.png?revision=0" alt="Portrait of an ancestor" />
+                            </div>
+                            <div class="person">
+                                <img src="images/kekule-3.png?revision=0" alt="Portrait of an ancestor" />
+                            </div>
+                        </div>
+                        <div class="generation">
+                            <div class="person">
+                                <img src="images/kekule-1.png?revision=0" alt="Portrait of an ancestor" />
                             </div>
                         </div>
                     </div>
