--- a/src/pages/career.html
+++ b/src/pages/career.html
@@ -53,29 +53,30 @@
                     <h2>Experience</h2>
                     <div class="occupation-container">
                         <div class="occupation-header">
-                            <h3 class="occupation-title">iOS Developer</h3>
+                            <h3 class="occupation-title">Developer for Apple platforms</h3>
                             <p class="occupation-employer">Open-Xchange GmbH</p>
                             <p class="occupation-range">Since August 2019</p>
                         </div>
                         <div class="occupation-description">
-                            <p>In August 2019 I took the opportunity that Open-Xchange provided me to continue working with Apple technologies on native iOS apps exclusively. The transition realised a long term career goal which I prepared for in my free time since a few years. My self-taught skills enabled me to hit the ground running. OX Mail is the product I am mainly working on with Xcode and Swift involving the VIP architecture, delivering it via GitLab continuous integration and Visual Studio App Center (previously Hockey).</p>
+                            <p>In August 2019 I took the opportunity that Open-Xchange provided me to continue working with Apple technologies on native iOS and macOS apps exclusively. The transition realised a long term career goal which I prepared for in my free time since a few years. OX Mail and OX Drive are the products I am working on with Xcode, Swift and Objective-C. This includes maintenance of the web-technology based OX Mail cross-platform module which is shared with our OX Mail Android app.</p>
                         </div>
                         <div class="occupation-clearance"></div>
                     </div>
                     <div class="occupation-container">
                         <div class="occupation-header">
-                            <h3 class="occupation-title">Software Developer</h3>
+                            <h3 class="occupation-title">Frontend Developer</h3>
                             <p class="occupation-employer">Open-Xchange GmbH</p>
                             <p class="occupation-range">From July 2018 to August 2019</p>
                         </div>
                         <div class="occupation-description">
-                            <p>Focus on front-end and mobile technologies. Developing fully localizable single page applications with Vue.js, Vuex, Backbone, TypeScript and LESS. Testing with Chai, Sinon.js, Selenium and Mocha. Native iOS app development using Xcode, Swift and delivery via GitLab continuous integration and Hockey. Node.js middleware and build chain development with Express.js, webpack and Grunt.</p>
+                            <p>Focus on front-end and mobile technologies. Developing fully localizable single page applications like OX Protect with Vue.js, Vuex, Backbone, TypeScript and LESS. Testing with Chai, Sinon.js, Selenium and Mocha. Also implementing features in OX Documents.</p>
+                            <p>Native iOS app development using Xcode, Swift and delivery via GitLab continuous integration and Hockey. Node.js middleware and build chain development with Express.js, webpack and Grunt.</p>
                         </div>
                         <div class="occupation-clearance"></div>
                     </div>
                     <div class="occupation-container">
                         <div class="occupation-header">
-                            <h3 class="occupation-title">PHP Backend Developer</h3>
+                            <h3 class="occupation-title">Backend Developer</h3>
                             <p class="occupation-employer">Applike GmbH</p>
                             <p class="occupation-range">From January 2018 to July 2018</p>
                         </div>
@@ -97,7 +98,7 @@
                     </div>
                     <div class="occupation-container">
                         <div class="occupation-header">
-                            <h3 class="occupation-title">Developer</h3>
+                            <h3 class="occupation-title">Application Developer</h3>
                             <p class="occupation-employer">Kreaktor GmbH</p>
                             <p class="occupation-range">From April 2016 to August 2016</p>
                         </div>
@@ -119,7 +120,7 @@
                     </div>
                     <div class="occupation-container">
                         <div class="occupation-header">
-                            <h3 class="occupation-title">Web and Application Developer</h3>
+                            <h3 class="occupation-title">Application Developer</h3>
                             <p class="occupation-employer">DER Fuchs GmbH</p>
                             <p class="occupation-range">From January 2015 to May 2015</p>
                         </div>
@@ -129,7 +130,7 @@
                     <div class="occupation-clearance"></div>
                     <div class="occupation-container">
                         <div class="occupation-header">
-                            <h3 class="occupation-title">Apprenticeship as an Information Technology Specialist</h3>
+                            <h3 class="occupation-title">Information Technology Specialist (Application Development)</h3>
                             <p class="occupation-employer">DER Fuchs GmbH</p>
                             <p class="occupation-range">From 2012 to 2015</p>
                         </div>
